--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,9 +142,29 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
 }
+
 @media screen and (max-width: 570px) {
   .services-checkbox {
     display: grid;
     grid-template-columns: 1fr;
   }
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 30s linear infinite;
+  display: flex;
+  width: max-content;
+}
+
+.animate-marquee:hover {
+  animation-play-state: paused;
 }
