--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -168,3 +168,23 @@
 .animate-marquee:hover {
   animation-play-state: paused;
 }
+
+.about-main {
+  position: relative;
+  background-image: url("/about-main.jpg");
+  width: 100%;
+  height: 100dvh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.about-main::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
